--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native-responsive-dimensions": "^3.1.1",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^13.14.0",
     "react-native-svg-transformer": "^1.1.0",
     "react-native-vector-icons": "^10.0.0"
